# sobakode-python

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: black.yml  pytest.yml  ruff.yml
{{cookiecutter.project_slug}}/tests/: test_file.py
