[tool.poetry]
name = "{{ cookiecutter-project-slug }}"
version = "0.1.0"
description = "Cookie Cutter Python Project"
# TODO Add information
authors = ["John Doe <john.doe@gmail.com>"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
ruff = "^0.0.221"
coverage = "^7.0.5"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
