[tool.poetry]
name = '{{ cookiecutter.project_slug }}'
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["' {{ cookiecutter.full_name }} ' <' {{ cookiecutter.email }} '>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
ruff = "^0.0.221"
coverage = "^7.0.5"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
