[tool.poetry]
name = '{{ cookiecutter.project_slug }}'
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["' {{ cookiecutter.full_name }} ' <' {{ cookiecutter.email }} '>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
# Formatting
black = "^22.12.0"
# Linting
ruff = "^0.0.221"
# Static typing
mypy = "^0.991"
# Testing
pytest = "^7.2.1"
pytest-sugar = "^0.9.6"
coverage = "^7.0.5"
# Validating commits
pre-commit = "^2.21.0"
# Docs
mkdocs-material = "^9.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
